--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,17 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+	<properties>
+  		<maven.version>3.9.1</maven.version>
+	</properties>
 	<dependencies>
 
+<dependency>
+    <groupId>org.apache.maven</groupId>
+    <artifactId>maven-core</artifactId>
+    <version>${maven.version}</version>
+  </dependency>
+  
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
